fixed spacing issue in hamburger menu. it doesn't expand more than it should anymore

--- a/src/app/feature/components/ddx-navbar/ddx-navbar.component.scss
+++ b/src/app/feature/components/ddx-navbar/ddx-navbar.component.scss
@@ -29,6 +29,10 @@
     &.mat-expansion-panel:first-child {
       border-top: none;
     }
+
+    &.mat-expansion-panel-spacing {
+      margin: 0;
+    }
   }
 
   .mat-expansion-panel-header {
